src/objects/Patent_Device__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled per comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected per comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banding_or_Variant__c</fullName>
        <formula>Device__r.Banding_or_Variant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banding or Variant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <formula>Device__r.Device_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Launch_Type__c</fullName>
        <formula>Device__r.SA_Release_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Launch Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Patent Devices</relationshipLabel>
        <relationshipName>Patent_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Name__c</fullName>
        <formula>Device__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_SW__c</fullName>
        <inlineHelpText>Required in order to submit for approval</inlineHelpText>
        <label>Link to SW</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patent</label>
        <referenceTo>Patent__c</referenceTo>
        <relationshipLabel>Patent Devices</relationshipLabel>
        <relationshipName>Patent_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stable_Line__c</fullName>
        <formula>Device__r.Stable_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stable Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround_Direction__c</fullName>
        <label>Workaround Direction</label>
        <picklist>
            <picklistValues>
                <fullName>No workaround required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround and submit to carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround and hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround at baseline only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold per comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround, Approve and Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workaround_LE_CWV_Date__c</fullName>
        <label>Workaround LE CWV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workaround_LE_Date__c</fullName>
        <formula>Device__r.LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workaround LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workaround_SA_CWV_Date__c</fullName>
        <label>Workaround SA CWV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workaround_SA_Date__c</fullName>
        <formula>Device__r.SA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workaround SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workaround_SA_ID__c</fullName>
        <label>Workaround SA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround_SW_Version__c</fullName>
        <label>Workaround SW Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround_TA_CWV_Date__c</fullName>
        <label>Workaround TA CWV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workaround_TA_Date__c</fullName>
        <formula>Device__r.TA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workaround TA Date</label>
        <type>Date</type>
    </fields>
    <label>Patent Device</label>
    <nameField>
        <label>Patent Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patent Devices</pluralLabel>
    <recordTypes>
        <fullName>Patent_Device</fullName>
        <active>true</active>
        <description>Used to connect patents and devices together</description>
        <label>Patent Device</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workaround</fullName>
        <active>true</active>
        <label>Workaround</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>